--- a/packages/std/tsconfig.json
+++ b/packages/std/tsconfig.json
@@ -13,9 +13,9 @@
 		"skipLibCheck": true,
 		"downlevelIteration": true,
 		"composite": true,
-		"rootDir": "./src",
+		"rootDir": "./",
 		"outDir": "./dist",
 		"declarationMap": true
 	},
-	"include": ["src/**/*"]
+	"include": ["src/**/*", "test/**/*"]
 }
