--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
     "private": true,
     "devDependencies": {
         "source-map-support": "^0.5.13",
-        "mobx": "^5.13.0"
+        "mobx": "^5.13.0",
+        "mobx-react": "^6.1.8"
     },
     "workspaces": [
 		"./packages/i18n/lib",
 		"./packages/i18n/cli",
 		"./packages/i18n/frontend",
-		"./packages/std"
+        "./packages/std",
+        "./packages/super-scrollview/lib",
+        "./packages/super-scrollview/demo-web"
 	]
 }
